--- a/views/header.html
+++ b/views/header.html
@@ -1,7 +1,7 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>PHP MVC skeleton</title>
+    <title><?php echo $CNF_head_title; ?></title>
 </head>
 <body>
