--- a/views/main.html
+++ b/views/main.html
@@ -1,1 +1,7 @@
-﻿﻿﻿HI﻿﻿-HI﻿﻿
+<form action="">
+  <span class="prm_val">Input Part Number</span>:
+  <input type="text" name="part_num" size="<?php echo $part_num_length;?>" maxlength="<?php echo $part_num_length;?>" value="<?php echo $part_num;?>">
+  <input type="submit" value="    Search    ">
+</form>
+
+Inputed Part Number is <?php echo $part_num;?>
